[gd_scene load_steps=11 format=3 uid="uid://casoypfdm7e3l"]

[ext_resource type="Script" path="res://character/base_character.gd" id="1_no52m"]
[ext_resource type="Texture2D" uid="uid://dk757my2pdcbs" path="res://assets/sprites/bubble/speech bubble.png" id="2_el6mn"]
[ext_resource type="Texture2D" uid="uid://bvlej2t4bsdwy" path="res://assets/sprites/bubble/thought bubble.png" id="3_hjt37"]
[ext_resource type="FontFile" uid="uid://0stppgtsii5n" path="res://assets/fonts/noirfont/Noir_regular.otf" id="3_i6wwd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hkq4m"]
atlas = ExtResource("2_el6mn")
region = Rect2(728.068, 93.6116, 70.8361, 54.3779)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpv24"]
atlas = ExtResource("3_hjt37")
region = Rect2(707.719, 0.390751, 91.2084, 87.6175)

[sub_resource type="Animation" id="Animation_txoud"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThoughtBubble:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-184, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ThoughtBubble:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6fc7b"]
resource_name = "fade_in_slide_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThoughtBubble:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-184, 20), Vector2(-184, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ThoughtBubble:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ybeep"]
resource_name = "fade_out_slide_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThoughtBubble:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-184, 7), Vector2(-184, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ThoughtBubble:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_exwjy"]
_data = {
"RESET": SubResource("Animation_txoud"),
"fade_in_slide_up": SubResource("Animation_6fc7b"),
"fade_out_slide_up": SubResource("Animation_ybeep")
}

[node name="BaseCharacter" type="Node2D"]
script = ExtResource("1_no52m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="SpeechBubble" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 272.0
offset_top = 31.0
offset_right = 312.0
offset_bottom = 71.0

[node name="TextureRect" type="TextureRect" parent="SpeechBubble"]
layout_mode = 0
offset_left = -333.0
offset_top = -319.0
offset_right = -192.0
offset_bottom = -197.0
texture = SubResource("AtlasTexture_hkq4m")

[node name="Label" type="Label" parent="SpeechBubble"]
layout_mode = 0
offset_left = -328.0
offset_top = -299.0
offset_right = -194.0
offset_bottom = -265.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_i6wwd")
theme_override_font_sizes/font_size = 16
text = "This is label"
horizontal_alignment = 1

[node name="NameTag" type="TextureRect" parent="SpeechBubble"]
layout_mode = 0
offset_left = -272.0
offset_top = -31.0
offset_right = 88.0
offset_bottom = 329.0

[node name="ThoughtBubble" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -184.0
offset_top = 7.0
offset_right = -144.0
offset_bottom = 47.0

[node name="TextureRect" type="TextureRect" parent="ThoughtBubble"]
layout_mode = 0
offset_left = 104.0
offset_top = -288.0
offset_right = 248.0
offset_bottom = -159.0
texture = SubResource("AtlasTexture_tpv24")

[node name="Label" type="Label" parent="ThoughtBubble"]
layout_mode = 0
offset_left = 136.0
offset_top = -262.0
offset_right = 229.0
offset_bottom = -228.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_i6wwd")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]

[node name="ThoughtBubbleTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_exwjy")
}

[connection signal="input_event" from="ClickArea" to="." method="_on_click_area_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
[connection signal="timeout" from="ThoughtBubbleTimer" to="." method="_on_thought_bubble_timer_timeout"]
